# ReiL

./: .gitattributes  .gitignore  10000patients.json  10000patients.xlsx  Check results.ipynb  Cluster segmentation.xlsx  Deep Learning Code 01.ipynb  MANIFEST.in  MNK_random_win_estimation.py  Makefile  README.md  README.rst  RL_learning_test.py  RL_snakes_env.py  RL_test_learned_agent_by_user.py  TTR per patient.csv  TicTacToe.ipynb  Untitled.ipynb  WARFV4_d_90_dose_9_INR_9_T__dose_change_coef_0.00_DQN_(20,20)_g_0.95_e_func_buff_90_clr_F_btch_50_vld_0.3.pkl  WARF_00_00_XX_d_90_dose_9_INR_9_T__dose_change_coef_0.0_DQN_(20,20)_g_0.95_e_func_lr_0.01_buff_900_clr_F_btch_50_vld_0.3.pkl  WARF_00_00_XX_d_90_dose_9_INR_9_T__dose_change_coef_0.1_DQN_(20,20)_g_0.95_e_func_lr_0.01_buff_900_clr_F_btch_50_vld_0.3.pkl  WARF_00_00_XX_d_90_dose_9_INR_9_T__dose_change_coef_0.20_DQN_(20,20)_g_0.8_e_func_lr_0.01_buff_900_clr_F_btch_50_vld_0.3.pkl  WARF_00_00_XX_d_90_dose_9_INR_9_T__dose_change_coef_0.2_DQN_(20,20)_g_0.95_e_func_lr_0.01_buff_900_clr_F_btch_50_vld_0.3.pkl  WARF_00_00_XX_d_90_dose_9_INR_9_T__dose_change_coef_0.40_DQN_(20,20)_g_0.8_e_func_lr_0.01_buff_900_clr_F_btch_50_vld_0.3.pkl  WARF_00_00_XX_d_90_dose_9_INR_9_T__dose_change_coef_0.80_DQN_(20,20)_g_0.8_e_func_lr_0.01_buff_900_clr_F_btch_50_vld_0.3.pkl  WARF_00_00_XX_days90_hist10_T_DQN_(10, 10)_lr_0.01_buff_180_batch_50.pkl  WARF_74_22_GA_days10_hist05_DQN10x10.pkl  WARF_74_22_GA_days10_hist05_Q.pkl  WARF_74_22_GA_days10_hist10_Q.pkl  WARF_74_22_GA_days90_hist10_DQN20x20.pkl  Weka output (16 clusters).csv  agents.py  ann.py  (+1689 more)
(+8968 files in other folders)
