[project]
name = "reil"
version = "0.1.9"
description = ""
authors = [
  { name = "Sadjad Anzabi Zadeh", email = "sadjad@anzabizadeh.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"

dependencies = [
  "absl-py >=0.15.0",
  "astor >=0.8.1",
  "astroid ==2.7.2",
  "colorama >=0.4.4",
  "cycler >=0.11.0",
  "dill >=0.3.4",
  "gast >=0.3.3",
  "google-pasta >=0.2.0",
  "grpcio >=1.32",
  "h5py >=3.0",
  "importlib-metadata >=4.10.1",
  "isort >=5.10.1",
  "Keras-Applications >=1.0.8",
  "Keras-Preprocessing >=1.1.2",
  "kiwisolver >=1.3.2",
  "lazy-object-proxy >=1.7.1",
  "Markdown >=3.3.6",
  "matplotlib >=3.5.1",
  "mccabe >=0.6.1",
  "numpy >=1.19.2",
  "opt-einsum >=3.3.0",
  "openpyxl >=3.0.9",
  "pandas >=1.2",
  "Pillow >=9.0.0",
  "protobuf >=6.32.0,<7.0.0",
  "pyparsing >=3.0.6",
  "python-dateutil >=2.8.2",
  "pytz >=2021.3",
  "ruamel.yaml >=0.17.20",
  "scipy >=1.7.3,<2.0.0",
  "six >=1.15",
  "scikit-learn >=1.0.2",
  "tensorboard >=2.7.0",
  "tensorflow-estimator >=2.4",
  "termcolor >=1.1.0",
  "versioneer >=0.21",
  "Werkzeug >=2.0.2",
  "wrapt >=1.12.1",
  "zipp >=3.7.0",
  "tensorflow-probability >=0.12.2",
  "tensorflow >=2.11,<3.0.0"
]

[tool.poetry.group.dev.dependencies]
pylint = ">=2.10.2"
pylama = ">=8.3.7"
seaborn = ">=0.11.2"
types-tensorflow = "^2.18.0.20250809"
scipy-stubs = "^1.16.1.1"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
